--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
 
     <div class="how">
-      <a href="howto.html" >How To Play?</a>
+      <a href="howTo.html" >How To Play?</a>
     </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="game.js"></script>
